scripts/nullaway/wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8.txt
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:108: error: [NullAway] dereferenced expression getMission() is @Nullable
        Submarine submarine = (Submarine) getMission().getPlayerCapitalShip();
                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:109: error: [NullAway] dereferenced expression submarine is @Nullable
        return "\ncurrent status\n==============\n" + submarine.toString() + "\n* simulation time:" + getMission().getSimulationEllapsedTime() + "s\n\t";
                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Station.java:39: error: [NullAway] dereferenced expression super.out is @Nullable
                super.out.write(("\n\n" + app.getStatus() + "'\n\n").getBytes());
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:62: error: [NullAway] dereferenced expression out is @Nullable
            out.writeUTF(string);
               ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:127: error: [NullAway] dereferenced expression out is @Nullable
            out.close();
               ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Ship.java:66: error: [NullAway] dereferenced expression engine is @Nullable
        speed += engine.getSpeedGain() - getShipDrag();
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Ship.java:71: error: [NullAway] dereferenced expression ((Helm) getShipPart("Helm")) is @Nullable
            float angle = (float) (((Helm) getShipPart("Helm")).getCurrentHeading() * (Math.PI / 180.0f));
                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/SteerCommand.java:17: error: [NullAway] dereferenced expression server.getMission() is @Nullable
        Submarine submarine = (Submarine) server.getMission().getPlayerCapitalShip();
                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/SteerCommand.java:18: error: [NullAway] dereferenced expression submarine is @Nullable
        Helm helm = ((Helm) submarine.getShipPart("Helm"));
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/SteerCommand.java:19: error: [NullAway] dereferenced expression helm is @Nullable
        helm.setNewHeading(Integer.parseInt(operand));
            ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/ToggleCommand.java:18: error: [NullAway] dereferenced expression server.getMission() is @Nullable
        Submarine submarine = (Submarine) server.getMission().getPlayerCapitalShip();
                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/ToggleCommand.java:19: error: [NullAway] dereferenced expression submarine is @Nullable
        ShipPart part = submarine.getShipPart(operand);
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/ThrustCommand.java:17: error: [NullAway] dereferenced expression server.getMission() is @Nullable
        Submarine submarine = (Submarine) server.getMission().getPlayerCapitalShip();
                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/ThrustCommand.java:18: error: [NullAway] dereferenced expression submarine is @Nullable
        Engine engine = ((Engine) submarine.getShipPart("Engine"));
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/ThrustCommand.java:19: error: [NullAway] dereferenced expression engine is @Nullable
        engine.setThrust(Float.parseFloat(operand));
              ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/PumpCommand.java:16: error: [NullAway] dereferenced expression server.getMission() is @Nullable
        Submarine submarine = (Submarine) server.getMission().getPlayerCapitalShip();
                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/commands/PumpCommand.java:17: error: [NullAway] dereferenced expression submarine is @Nullable
        submarine.tanks.setLevel(Integer.parseInt(operand));
                 ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
17 errors
